--- a/player/templates/player/redesign/player_help.html
+++ b/player/templates/player/redesign/player_help.html
@@ -1,18 +1,43 @@
 {% load l10n %}{% load i18n %}
 {% load static %}
 
+<!--блоки Обзора-->
 'overview world block': "Здесь собрана информация о мире игры: население, онлайн, число партий, стран, независимых регионов",
 
 'overview state block': "Здесь вы можете узнать информацию о государстве вашего местонахождения: население, онлайн, число партий",
 
 'overview region block': "Здесь вы можете узнать больше о регионе вашего местонахождения: население, онлайн, число партий",
 
-'overview skills block': "Здесь вы можете развить своего персонажа, улучшив одну их трёх основных характеристик - Силу, Интеллект, Выносливость",
-
 'overview war block': "Здесь отображается ближайшая к вам война, проходящая в государстве или мире в целом",
 
 'overview event block': "Это особое событие, проходящее в мире Wild Politics прямо сейчас. Успейте принять участие!",
 
+<!--характеристики-->
+
+'overview power_skill block': "Сила вашего персонажа влияет на конечный урон в войнах. Также, каждая из Характеристик повышает выплаты Финансирования",
+
+'overview knowledge_skill block': "Интеллект влияет на объёмы производимой продукции и возможность улучшения Склада. Также, каждая из Характеристик повышает выплаты Финансирования",
+
+'overview endurance_skill block': "Выносливость вашего персонажа повышает объёмы добываемого сырья. Также, каждая из Характеристик повышает выплаты Финансирования",
+
+'overview skills block': "Здесь вы можете развить своего персонажа, улучшив одну их трёх основных характеристик - Силу, Интеллект, Выносливость",
+
+'overview skills_queue block': "Очередь последующей прокачки Характеристик, доступна с Премиум-аккаунтом",
+
+'overview current_skill block': "Время завершения прокачки Характеристики, улучшаемой в данный момент",
+
+'overview boost_skill block': "При наличии на Складе текущего региона бустеров, вы можете ускорить прокачку Характеристики, нажав на эту кнопку",
+
+<!--выборы-->
+
 'overview pres_elections block': "Выборы президента, проходящие в стране вашего местонахождения",
 
+'overview parl_elections block': "Выборы в парламент, проходящие в стране вашего местонахождения",
+
+<!--прочее-->
+
 'overview chat block': "Общий чат, где вы можете пообщаться со всеми игроками",
+
+'overview state_paties block': "Все партии, существующие в данном государстве",
+
+'overview parl_paties block': "Партии, представленные в парламенте государства, и процент занимаемых ими мест",
