--- a/bill/templates/state/redesign/drafts/change_residency.html
+++ b/bill/templates/state/redesign/drafts/change_residency.html
@@ -18,7 +18,7 @@
     </label>
 
     <div id="change_residency_price" class="gover__newInner-flexColumn active" style="display: none">
-        <h3>Стоимость:</h3>
+        <h3>стоимость:</h3>
         {% with rifle_cost=data|dict_key:'rifle_cost' %}
         <p style="margin-top: 5rem;">{% trans 'Автоматы' context "goods" %}: <b>{{ rifle_cost }}</b></p>
         {% endwith %}
