--- a/bill/templates/state/redesign/drafts/explore_resources.html
+++ b/bill/templates/state/redesign/drafts/explore_resources.html
@@ -171,7 +171,7 @@
     <p id="explore_exp_line" style="display: none">За последние сутки: <span id="explore_res_exp"></span></p>
     <p id="explore_mul_line" style="display: none">Множитель: <b><span id="explore_res_mul"></span></b></p>
 
-    <p id="explore_sum_line" style="display: none">Стоимость разведки: <b>$<span id="explore_sum"></span></b></p>
+    <p id="explore_sum_line" style="display: none">стоимость разведки: <b>$<span id="explore_sum"></span></b></p>
 
     <button type="submit" class="ct__mid-btn active">
         <svg width="144" height="30" viewBox="0 0 144 30" fill="none" xmlns="http://www.w3.org/2000/svg">
