--- a/bill/templates/state/redesign/drafts/purchase_auction.html
+++ b/bill/templates/state/redesign/drafts/purchase_auction.html
@@ -60,7 +60,7 @@
         </div>
     </div>
 
-    <p>Стоимость: <b>$<span id="purchase_cost">0</span></b></p>
+    <p>стоимость: <b>$<span id="purchase_cost">0</span></b></p>
 
     <button type="submit" class="ct__mid-btn active">
         <svg width="144" height="30" viewBox="0 0 144 30" fill="none" xmlns="http://www.w3.org/2000/svg">
