--- a/bill/templates/state/redesign/new_bill.html
+++ b/bill/templates/state/redesign/new_bill.html
@@ -64,7 +64,7 @@
             </label>
 
             <p>Запасы: 26 / 14</p>
-            <h3>Стоимость разведки:</h3>
+            <h3>стоимость разведки:</h3>
             <p><b>140 Буровых установок</b></p>
 
             <button class="ct__mid-btn active">
