перевод страницы с ПД

--- a/player/templates/player/personal_data.html
+++ b/player/templates/player/personal_data.html
@@ -1,47 +1,48 @@
 <!DOCTYPE html>
+{% load l10n %}{% load i18n %}{% load tz %}
 <html>
     <head>
     <meta charset="UTF-8">
-    <title>Согласие на обработку персональных данных</title>
+    <title>{% trans 'Согласие на обработку персональных данных' context "personal_data" %}</title>
     </head>
 
     <body>
-        <h1 align="center">Согласие на обработку персональных данных</h1>
+        <h1 align="center">{% trans 'Согласие на обработку персональных данных' context "personal_data" %}</h1>
         <div flex style="margin-top: 50px">
 
-            <p>Я, передавая уникальные идентификаторы социальных сетей, а также имя, фамилию и псевдонимы в них, далее именуемый(ая) "Субъект персональных данных", даю свое согласие на обработку своих персональных данных Администрацией Wild Politics, физическим лицом Горшенин А.И., далее именуемым "Администрация", в соответствии с законодательством Российской Федерации (далее - "Законодательство").</p>
+            <p>{% trans 'Я, передавая уникальные идентификаторы социальных сетей, а также имя, фамилию и псевдонимы в них, далее именуемый(ая) "Субъект персональных данных", даю свое согласие на обработку своих персональных данных Администрацией Wild Politics, физическим лицом Горшенин А.И., далее именуемым "Администрация", в соответствии с законодательством Российской Федерации (далее - "Законодательство").' context "personal_data" %}</p>
 
-            <h3 align="center">Цель обработки персональных данных:</h3>
+            <h3 align="center">{% trans 'Цель обработки персональных данных:' context "personal_data" %}</h3>
             <ul>
-                <li>Предоставление услуг развлекательного характера.</li>
-                <li>Информирование пользователя об изменениях работы Сайта.</li>
-                <li>Обработка данных в рекламных целях.</li>
+                <li>{% trans 'Предоставление услуг развлекательного характера.' context "personal_data" %}</li>
+                <li>{% trans 'Информирование пользователя об изменениях работы Сайта.' context "personal_data" %}</li>
+                <li>{% trans 'Обработка данных в рекламных целях.' context "personal_data" %}</li>
             </ul>
 
-            <h3 align="center">Категории персональных данных:</h3>
+            <h3 align="center">{% trans 'Категории персональных данных:' context "personal_data" %}</h3>
             <ul>
-                <li>Уникальные идентификаторы социальных сетей.</li>
-                <li>Имя, фамилия и псевдонимы в социальных сетях.</li>
-                <li>IP-адрес и информация браузера.</li>
+                <li>{% trans 'Уникальные идентификаторы социальных сетей.' context "personal_data" %}</li>
+                <li>{% trans 'Имя, фамилия и псевдонимы в социальных сетях.' context "personal_data" %}</li>
+                <li>{% trans 'IP-адрес и информация браузера.' context "personal_data" %}</li>
             </ul>
 
-            <h3 align="center">Способы и условия обработки персональных данных:</h3>
-            <p>Сбор, хранение, использование и передача третьим лицам в рекламных целях, а также в целях повышения качества работы Сервисов Wild Politics.</p>
+            <h3 align="center">{% trans 'Способы и условия обработки персональных данных:' context "personal_data" %}</h3>
+            <p>{% trans 'Сбор, хранение, использование и передача третьим лицам в рекламных целях, а также в целях повышения качества работы Сервисов Wild Politics.' context "personal_data" %}</p>
 
-            <h3 align="center">Передача персональных данных третьим лицам:</h3>
-            <p>Субъект персональных данных соглашается на передачу его/ее персональных данных третьим лицам, для хранения и обработки в рекламных целях, а также в целях повышения качества работы Сервисов Wild Politics.</p>
+            <h3 align="center">{% trans 'Передача персональных данных третьим лицам:' context "personal_data" %}</h3>
+            <p>{% trans 'Субъект персональных данных соглашается на передачу его/ее персональных данных третьим лицам, для хранения и обработки в рекламных целях, а также в целях повышения качества работы Сервисов Wild Politics.' context "personal_data" %}</p>
 
-            <h3 align="center">Сроки обработки персональных данных:</h3>
-            <p>Персональные данные субъекта персональных данных хранятся и обрабатываются Администрацией до получения письменного обращения от пользователя в свободной форме, с желанием отозвать своё согласие на обработку персональных данных.</p>
+            <h3 align="center">{% trans 'Сроки обработки персональных данных:' context "personal_data" %}</h3>
+            <p>{% trans 'Персональные данные субъекта персональных данных хранятся и обрабатываются Администрацией до получения письменного обращения от пользователя в свободной форме, с желанием отозвать своё согласие на обработку персональных данных.' context "personal_data" %}</p>
 
-            <h3 align="center">Отзыв согласия на обработку персональных данных:</h3>
-            <p>Субъект персональных данных имеет право отозвать свое согласие на обработку своих персональных данных.</p>
-            <p>В случае получения информации о желании отозвать согласие, Администрация имеет 14-дневный срок на обработку данного обращения по отзыву согласия.</p>
+            <h3 align="center">{% trans 'Отзыв согласия на обработку персональных данных:' context "personal_data" %}</h3>
+            <p>{% trans 'Субъект персональных данных имеет право отозвать свое согласие на обработку своих персональных данных.' context "personal_data" %}</p>
+            <p>{% trans 'Инструкция по удалению персональных данных размещена по адресу' context "personal_data" %} <a href="/data_deleting">https://wildpolitics.ru/data_deleting</a>.</p>
 
-            <h3 align="center">Контактная информация оператора:</h3>
-            <p>Электронная почта Администрации: andrey.gorshenin.95@gmail.com.</p>
+            <h3 align="center">{% trans 'Контактная информация оператора:' context "personal_data" %}</h3>
+            <p>{% trans 'Электронная почта Администрации:' context "personal_data" %} <a href="mailto:wildpolitics@yandex.com">wildpolitics@yandex.com</a></p>
 
-            <p align="center">Я ПОДТВЕРЖДАЮ, ЧТО ЯВЛЯЮСЬ СУБЪЕКТОМ ПЕРСОНАЛЬНЫХ ДАННЫХ, ОЗНАКОМЛЕН(А) С ЦЕЛЯМИ ОБРАБОТКИ МОИХ ПЕРСОНАЛЬНЫХ ДАННЫХ И ДОБРОВОЛЬНО ПРЕДОСТАВЛЯЮ СВОЕ СОГЛАСИЕ НА ИХ ОБРАБОТКУ В СООТВЕТСТВИИ С УКАЗАННЫМИ ВЫШЕ УСЛОВИЯМИ И УСЛОВИЯМИ ЗАКОНОДАТЕЛЬСТВА.</p>
+            <p align="center">{% trans 'Я ПОДТВЕРЖДАЮ, ЧТО ЯВЛЯЮСЬ СУБЪЕКТОМ ПЕРСОНАЛЬНЫХ ДАННЫХ, ОЗНАКОМЛЕН(А) С ЦЕЛЯМИ ОБРАБОТКИ МОИХ ПЕРСОНАЛЬНЫХ ДАННЫХ И ДОБРОВОЛЬНО ПРЕДОСТАВЛЯЮ СВОЕ СОГЛАСИЕ НА ИХ ОБРАБОТКУ В СООТВЕТСТВИИ С УКАЗАННЫМИ ВЫШЕ УСЛОВИЯМИ И УСЛОВИЯМИ ЗАКОНОДАТЕЛЬСТВА.' context "personal_data" %}</p>
         </div>
     </body>
 </html>
