--- a/chat/templates/chat/dialogue.html
+++ b/chat/templates/chat/dialogue.html
@@ -28,7 +28,7 @@
 				  {{ player.pk|json_script:"player_id" }}
 				<div class="overview__chat-messages" id="chat-log-{% localize off %}{{ chat_id }}{% endlocalize %}">
 					{% if messages|get_len >= 50 %}
-					<button class="overview__chat-more longBtnWihoutCorners" onclick="loadPrevBlock()" style="cursor: pointer">Загрузить предыдущие сообщения</button>
+					<button class="overview__chat-more longBtnWihoutCorners" onclick="loadPrevBlock()" style="cursor: pointer">{% trans 'Загрузить предыдущие сообщения' context "chat" %}</button>
 					{% endif %}
 					{% for message in messages %}
                 		{% if message|dict_key:'content' != 'ban_chat' and message|dict_key:'content' != 'delete_message' %}
