--- a/chat/templates/chat/dialogues.html
+++ b/chat/templates/chat/dialogues.html
@@ -24,7 +24,7 @@
 
   <section class="dialogs custom-scroll">
 		<h1 class="dialogs__title ct__page-title">
-			Диалоги
+			{% trans 'Диалоги' context "chat" %}
 			{% if user.is_superuser %}
 			<button class="nav__svg-newMessage " onclick="window.location.href = '/new_admin_sending/'" style="cursor: pointer">
 
