--- a/chat/templates/chat/mass_sending/new_sending.html
+++ b/chat/templates/chat/mass_sending/new_sending.html
@@ -15,7 +15,7 @@
    <section class="articles custom-scroll">
     <!-- Заголовок -->
     <h1 class="sending__title ct__page-title">
-      Новая рассылка
+      {% trans 'Новая рассылка' context "chat" %}
     </h1>
 
 		<!--ДЛЯ ПАНЕЛЬКИ РЕДАКТИРОВАНИЯ СТАТЬИ-->
@@ -41,7 +41,7 @@
 							<path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"/>
 						</g>
 					</svg>
-					<span>{% trans 'опубликовать' context "article" %}</span>
+					<span>{% trans 'отправить' context "chat" %}</span>
 				</button>
 			</div>
 		</form>
